updated for upstream changes and meson

--- a/meson.build
+++ b/meson.build
@@ -334,6 +334,7 @@ subdir('src/lib/sqlite')
 subdir('src/lib/systemd')
 subdir('src/lib/upnp')
 subdir('src/lib/yajl')
+subdir('src/lib/ytdl')
 
 subdir('src/lib/crypto')
 
