ytdl input stream

--- a/src/input/plugins/meson.build
+++ b/src/input/plugins/meson.build
@@ -97,6 +97,7 @@ endif
 if enable_ytdl
   input_plugins_sources += [
     'YtdlInputPlugin.cxx',
+    'YtdlInputStream.cxx',
     'YtdlTagScanner.cxx',
   ]
   input_plugins_deps += [
