db/update/Walk: move UpdatePlaylistFile() to Playlist.cxx

--- a/src/db/meson.build
+++ b/src/db/meson.build
@@ -27,6 +27,7 @@ db_glue_sources = [
   'update/Walk.cxx',
   'update/UpdateSong.cxx',
   'update/Container.cxx',
+  'update/Playlist.cxx',
   'update/Remove.cxx',
   'update/ExcludeList.cxx',
   'DatabaseGlue.cxx',
