test/TestUriRelative: new unit test

--- a/test/meson.build
+++ b/test/meson.build
@@ -39,6 +39,7 @@ test('TestUtil', executable(
   'TestSplitString.cxx',
   'TestUriExtract.cxx',
   'TestUriQueryParser.cxx',
+  'TestUriRelative.cxx',
   'TestUriUtil.cxx',
   'test_byte_reverse.cxx',
   include_directories: inc,
