storage/curl: move code to EscapeUriPath()

--- a/src/lib/curl/meson.build
+++ b/src/lib/curl/meson.build
@@ -11,6 +11,7 @@ curl = static_library(
   'Init.cxx',
   'Global.cxx',
   'Request.cxx',
+  'Escape.cxx',
   'Form.cxx',
   include_directories: inc,
   dependencies: [
