Sonos http mixer (requires noson lib)

--- a/src/mixer/plugins/meson.build
+++ b/src/mixer/plugins/meson.build
@@ -1,5 +1,6 @@
 mixer_plugins_sources = [
   'NullMixerPlugin.cxx',
+  'HttpdMixerPlugin.cxx',
   'SoftwareMixerPlugin.cxx',
 ]
 
@@ -12,6 +13,12 @@ endif
 
 if is_haiku
   mixer_plugins_sources += 'HaikuMixerPlugin.cxx'
+endif
+
+if noson_dep.found()
+  if  openssl_dep.found()
+    mixer_plugins_sources += 'HttpdMixerPlugin.cxx'
+  endif
 endif
 
 if enable_oss
@@ -42,6 +49,8 @@ mixer_plugins = static_library(
     alsa_dep,
     pulse_dep,
     libsndio_dep,
+    noson_dep,
+    openssl_dep,
   ]
 )
 
