--- a/meson.build
+++ b/meson.build
@@ -326,6 +326,7 @@ subdir('src/lib/expat')
 subdir('src/lib/ffmpeg')
 subdir('src/lib/gcrypt')
 subdir('src/lib/nfs')
+subdir('src/lib/noson')
 subdir('src/lib/oss')
 subdir('src/lib/pcre')
 subdir('src/lib/pulse')
