--- a/meson_options.txt
+++ b/meson_options.txt
@@ -176,6 +176,7 @@ option('dbus', type: 'feature', description: 'D-Bus support')
 option('expat', type: 'feature', description: 'Expat XML support')
 option('icu', type: 'feature', description: 'Use libicu for Unicode')
 option('iconv', type: 'feature', description: 'Use iconv() for character set conversion')
+option('noson', type: 'feature', description: 'Use noson as httpd mixer for Sonos or Symfonisk support')
 option('pcre', type: 'feature', description: 'Enable regular expression support (using libpcre)')
 option('sqlite', type: 'feature', description: 'SQLite database support (for stickers)')
 option('yajl', type: 'feature', description: 'libyajl for YAML support')
