Sonos httpd mixer (requires noson C++ library 2.0.0 or better)

--- a/meson.build
+++ b/meson.build
@@ -348,6 +348,7 @@ subdir('src/lib/expat')
 subdir('src/lib/ffmpeg')
 subdir('src/lib/gcrypt')
 subdir('src/lib/nfs')
+subdir('src/lib/noson')
 subdir('src/lib/oss')
 subdir('src/lib/pcre')
 subdir('src/lib/pulse')
