--- a/.travis.yml
+++ b/.travis.yml
@@ -25,7 +25,7 @@ matrix:
         - /usr/bin/python3.6 $HOME/.local/bin/pip install --user meson
       env:
         # use gold as workaround for https://sourceware.org/bugzilla/show_bug.cgi?id=17068
-        - MATRIX_EVAL="export CC=gcc-6 CXX=g++-6 LDFLAGS=-fuse-ld=gold PATH=$HOME/.local/bin:$PATH"
+        - MATRIX_EVAL="export CC='ccache gcc-6' CXX='ccache g++-6' LDFLAGS=-fuse-ld=gold PATH=$HOME/.local/bin:$PATH"
 
     - os: linux
       dist: trusty
@@ -50,7 +50,7 @@ matrix:
         - /usr/bin/python3.6 $HOME/.local/bin/pip install --user meson
       env:
         # use gold as workaround for https://sourceware.org/bugzilla/show_bug.cgi?id=17068
-        - MATRIX_EVAL="export CC=gcc-8 CXX=g++-8 LDFLAGS=-fuse-ld=gold PATH=$HOME/.local/bin:$PATH"
+        - MATRIX_EVAL="export CC='ccache gcc-8' CXX='ccache g++-8' LDFLAGS=-fuse-ld=gold PATH=$HOME/.local/bin:$PATH"
 
     - os: osx
       osx_image: xcode9.3beta
