.travis.yml: add Ubuntu Bionic build

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,28 @@ language: cpp
 
 matrix:
   include:
+    # Ubuntu Bionic (18.04) with GCC 7
+    - os: linux
+      dist: bionic
+      addons:
+        apt:
+          sources:
+            - sourceline: 'ppa:deadsnakes/ppa' # for Python 3.7 (required by Meson)
+          packages:
+            - libgtest-dev
+            - libboost-dev
+            - python3.6
+            - python3-urllib3
+            - ninja-build
+      before_install:
+        - wget https://bootstrap.pypa.io/get-pip.py
+        - /usr/bin/python3.6 get-pip.py --user
+      install:
+        - /usr/bin/python3.6 $HOME/.local/bin/pip install --user meson
+      env:
+        - MATRIX_EVAL="export PATH=$HOME/.local/bin:$PATH"
+
+    # Ubuntu Trusty (16.04) with GCC 6
     - os: linux
       dist: trusty
       addons:
@@ -27,6 +49,7 @@ matrix:
         # use gold as workaround for https://sourceware.org/bugzilla/show_bug.cgi?id=17068
         - MATRIX_EVAL="export CC='ccache gcc-6' CXX='ccache g++-6' LDFLAGS=-fuse-ld=gold PATH=$HOME/.local/bin:$PATH"
 
+    # Ubuntu Trusty (16.04) with GCC 8
     - os: linux
       dist: trusty
       addons:
