--- a/.travis.yml
+++ b/.travis.yml
@@ -78,7 +78,7 @@ matrix:
     - os: osx
       osx_image: xcode9.3beta
       env:
-        - MATRIX_EVAL="export PATH=/usr/local/opt/ccache/libexec:$PATH"
+        - MATRIX_EVAL="export PATH=/usr/local/opt/ccache/libexec:$PATH HOMEBREW_NO_ANALYTICS=1"
 
 cache:
   apt: true
