--- a/.travis.yml
+++ b/.travis.yml
@@ -77,6 +77,11 @@ matrix:
 
     - os: osx
       osx_image: xcode9.4
+      addons:
+        homebrew:
+          packages:
+            - ccache
+            - meson
       env:
         - MATRIX_EVAL="export PATH=/usr/local/opt/ccache/libexec:$PATH HOMEBREW_NO_ANALYTICS=1"
 
@@ -99,7 +104,6 @@ install:
   # belonging to nss. You can unlink it" during gtest install
   - test "$TRAVIS_OS_NAME" != "osx" || brew unlink nss
 
-  - test "$TRAVIS_OS_NAME" != "osx" || brew install ccache meson
   - test "$TRAVIS_OS_NAME" != "osx" || brew install --HEAD https://gist.githubusercontent.com/Kronuz/96ac10fbd8472eb1e7566d740c4034f8/raw/gtest.rb
 
 before_script:
