--- a/src/decoder/meson.build
+++ b/src/decoder/meson.build
@@ -5,6 +5,9 @@ decoder_api = static_library(
   'DecoderBuffer.cxx',
   'DecoderPlugin.cxx',
   include_directories: inc,
+  dependencies: [
+    log_dep,
+  ],
 )
 
 decoder_api_dep = declare_dependency(
