--- a/test/meson.build
+++ b/test/meson.build
@@ -23,8 +23,6 @@ subdir('net')
 executable(
   'read_conf',
   'read_conf.cxx',
-  '../src/Log.cxx',
-  '../src/LogBackend.cxx',
   include_directories: inc,
   dependencies: [
     config_dep,
@@ -65,8 +63,6 @@ test(
 test('TestRewindInputStream', executable(
   'TestRewindInputStream',
   'TestRewindInputStream.cxx',
-  '../src/Log.cxx',
-  '../src/LogBackend.cxx',
   include_directories: inc,
   dependencies: [
     input_glue_dep,
@@ -77,10 +73,9 @@ test('TestRewindInputStream', executable(
 test('test_mixramp', executable(
   'test_mixramp',
   'test_mixramp.cxx',
-  '../src/Log.cxx',
-  '../src/LogBackend.cxx',
   include_directories: inc,
   dependencies: [
+    log_dep,
     util_dep,
     gtest_dep,
   ],
@@ -111,8 +106,6 @@ test('TestFs', executable(
   'TestFs',
   'TestFs.cxx',
   'TestLookupFile.cxx',
-  '../src/Log.cxx',
-  '../src/LogBackend.cxx',
   include_directories: inc,
   dependencies: [
     fs_dep,
@@ -136,8 +129,6 @@ if libavahi_client_dep.found()
     'run_avahi',
     'run_avahi.cxx',
     'ShutdownHandler.cxx',
-    '../src/Log.cxx',
-    '../src/LogBackend.cxx',
     include_directories: inc,
     dependencies: [
       zeroconf_dep,
@@ -153,8 +144,6 @@ if enable_inotify
     'ShutdownHandler.cxx',
     '../src/db/update/InotifyDomain.cxx',
     '../src/db/update/InotifySource.cxx',
-    '../src/Log.cxx',
-    '../src/LogBackend.cxx',
     include_directories: inc,
     dependencies: [
       event_dep,
@@ -180,8 +169,6 @@ executable(
 executable(
   'WriteFile',
   'WriteFile.cxx',
-  '../src/Log.cxx',
-  '../src/LogBackend.cxx',
   include_directories: inc,
   dependencies: [
     fs_dep,
@@ -191,8 +178,6 @@ executable(
 executable(
   'dump_text_file',
   'dump_text_file.cxx',
-  '../src/Log.cxx',
-  '../src/LogBackend.cxx',
   include_directories: inc,
   dependencies: [
     input_glue_dep,
@@ -213,8 +198,6 @@ if zlib_dep.found()
   executable(
     'run_gunzip',
     'run_gunzip.cxx',
-    '../src/Log.cxx',
-    '../src/LogBackend.cxx',
     include_directories: inc,
     dependencies: [
       fs_dep,
@@ -258,8 +241,6 @@ if neighbor_glue_dep.found()
     'run_neighbor_explorer',
     'run_neighbor_explorer.cxx',
     'ShutdownHandler.cxx',
-    '../src/Log.cxx',
-    '../src/LogBackend.cxx',
     include_directories: inc,
     dependencies: [
       neighbor_glue_dep,
@@ -275,8 +256,6 @@ if enable_database
   executable(
     'run_storage',
     'run_storage.cxx',
-    '../src/Log.cxx',
-    '../src/LogBackend.cxx',
     include_directories: inc,
     dependencies: [
       event_dep,
@@ -288,8 +267,6 @@ if enable_database
     'DumpDatabase',
     'DumpDatabase.cxx',
     '../src/protocol/Ack.cxx',
-    '../src/Log.cxx',
-    '../src/LogBackend.cxx',
     '../src/db/Registry.cxx',
     '../src/db/Selection.cxx',
     '../src/db/PlaylistVector.cxx',
@@ -314,7 +291,6 @@ if enable_database
     '../src/playlist/PlaylistSong.cxx',
     '../src/SongLoader.cxx',
     '../src/LocateUri.cxx',
-    '../src/Log.cxx',
     include_directories: inc,
     dependencies: [
       tag_dep,
@@ -332,8 +308,6 @@ executable(
   'run_input',
   'run_input.cxx',
   '../src/TagSave.cxx',
-  '../src/Log.cxx',
-  '../src/LogBackend.cxx',
   include_directories: inc,
   dependencies: [
     input_glue_dep,
@@ -346,8 +320,6 @@ if curl_dep.found()
     'RunCurl',
     'RunCurl.cxx',
     'ShutdownHandler.cxx',
-    '../src/Log.cxx',
-    '../src/LogBackend.cxx',
     include_directories: inc,
     dependencies: [
       curl_dep,
@@ -357,8 +329,6 @@ if curl_dep.found()
   test('test_icy_parser', executable(
     'test_icy_parser',
     'test_icy_parser.cxx',
-    '../src/Log.cxx',
-    '../src/LogBackend.cxx',
     include_directories: inc,
     dependencies: [
       icu_dep,
@@ -376,8 +346,6 @@ if archive_glue_dep.found()
   executable(
     'visit_archive',
     'visit_archive.cxx',
-    '../src/Log.cxx',
-    '../src/LogBackend.cxx',
     include_directories: inc,
     dependencies: [
       archive_glue_dep,
@@ -412,8 +380,6 @@ executable(
   'dump_playlist.cxx',
   '../src/TagSave.cxx',
   '../src/TagFile.cxx',
-  '../src/Log.cxx',
-  '../src/LogBackend.cxx',
   include_directories: inc,
   dependencies: [
     playlist_glue_dep,
@@ -432,8 +398,6 @@ if chromaprint_dep.found()
     'RunChromaprint',
     'RunChromaprint.cxx',
     '../src/lib/chromaprint/DecoderClient.cxx',
-    '../src/Log.cxx',
-    '../src/LogBackend.cxx',
     include_directories: inc,
     dependencies: [
       decoder_glue_dep,
@@ -452,8 +416,6 @@ executable(
   'run_decoder',
   'run_decoder.cxx',
   'DumpDecoderClient.cxx',
-  '../src/Log.cxx',
-  '../src/LogBackend.cxx',
   include_directories: inc,
   dependencies: [
     decoder_glue_dep,
@@ -465,8 +427,6 @@ executable(
 executable(
   'read_tags',
   'read_tags.cxx',
-  '../src/Log.cxx',
-  '../src/LogBackend.cxx',
   include_directories: inc,
   dependencies: [
     decoder_glue_dep,
@@ -480,8 +440,6 @@ executable(
   'ContainerScan.cxx',
   '../src/SongSave.cxx',
   '../src/TagSave.cxx',
-  '../src/Log.cxx',
-  '../src/LogBackend.cxx',
   include_directories: inc,
   dependencies: [
     decoder_glue_dep,
@@ -493,8 +451,6 @@ executable(
 executable(
   'ReadApeTags',
   'ReadApeTags.cxx',
-  '../src/Log.cxx',
-  '../src/LogBackend.cxx',
   include_directories: inc,
   dependencies: [
     tag_dep,
@@ -507,8 +463,6 @@ if libid3tag_dep.found()
   executable(
     'dump_rva2',
     'dump_rva2.cxx',
-    '../src/Log.cxx',
-    '../src/LogBackend.cxx',
     include_directories: inc,
     dependencies: [
       tag_dep,
@@ -543,8 +497,6 @@ test('test_pcm', executable(
 executable(
   'run_filter',
   'run_filter.cxx',
-  '../src/Log.cxx',
-  '../src/LogBackend.cxx',
   include_directories: inc,
   dependencies: [
     filter_glue_dep,
@@ -573,8 +525,6 @@ executable(
 executable(
   'run_convert',
   'run_convert.cxx',
-  '../src/Log.cxx',
-  '../src/LogBackend.cxx',
   include_directories: inc,
   dependencies: [
     pcm_dep,
@@ -591,8 +541,6 @@ if encoder_glue_dep.found()
     'run_encoder',
     'run_encoder.cxx',
     '../src/AudioParser.cxx',
-    '../src/Log.cxx',
-    '../src/LogBackend.cxx',
     include_directories: inc,
     dependencies: [
       encoder_glue_dep,
@@ -602,8 +550,6 @@ if encoder_glue_dep.found()
   executable(
     'test_vorbis_encoder',
     'test_vorbis_encoder.cxx',
-    '../src/Log.cxx',
-    '../src/LogBackend.cxx',
     include_directories: inc,
     dependencies: [
       encoder_glue_dep,
@@ -618,8 +564,6 @@ endif
 executable(
   'run_output',
   'run_output.cxx',
-  '../src/Log.cxx',
-  '../src/LogBackend.cxx',
   include_directories: inc,
   dependencies: [
     output_glue_dep,
@@ -637,8 +581,6 @@ if alsa_dep.found()
   executable(
     'read_mixer',
     'read_mixer.cxx',
-    '../src/Log.cxx',
-    '../src/LogBackend.cxx',
     include_directories: inc,
     dependencies: [
       mixer_glue_dep,
