pcm/meson.build: split libpcm into two
One basic library without dependencies, and one with heavy
dependencies like libsamplerate.

--- a/src/encoder/plugins/meson.build
+++ b/src/encoder/plugins/meson.build
@@ -44,6 +44,7 @@ encoder_plugins = static_library(
   encoder_plugins_sources,
   include_directories: inc,
   dependencies: [
+    pcm_basic_dep,
     flac_dep,
     ogg_dep,
     libopus_dep,
