test/meson.build: add -Wno-unused-command-line-argument for clang 9+

--- a/test/meson.build
+++ b/test/meson.build
@@ -9,6 +9,14 @@ if compiler.get_id() == 'gcc'
   ]
 endif
 
+if compiler.get_id() == 'clang' and compiler.version().version_compare('>=9')
+  gtest_compile_args += [
+    # work around clang warning caused by GTest's wrong "-lpthread"
+    # compiler flag
+    '-Wno-unused-command-line-argument',
+  ]
+endif
+
 gtest_dep = declare_dependency(
   dependencies: [dependency('gtest', main: true)],
   compile_args: gtest_compile_args,
