test/meson.build: restore -Wno-missing-declarations for GTest
This is still needed for GTest 1.8.0 (Travis / Ubuntu Bionic).

--- a/test/meson.build
+++ b/test/meson.build
@@ -6,6 +6,7 @@ if compiler.get_id() == 'gcc'
   gtest_compile_args += [
     '-Wno-suggest-attribute=format',
     '-Wno-suggest-attribute=noreturn',
+    '-Wno-missing-declarations',
   ]
 endif
 
