--- a/.travis.yml
+++ b/.travis.yml
@@ -148,7 +148,7 @@ install:
   # belonging to nss. You can unlink it" during gtest install
   - test "$TRAVIS_OS_NAME" != "osx" || brew unlink nss
 
-  - test "$TRAVIS_OS_NAME" != "osx" || brew install --HEAD https://gist.githubusercontent.com/Kronuz/96ac10fbd8472eb1e7566d740c4034f8/raw/gtest.rb
+  - test "$TRAVIS_OS_NAME" != "osx" || brew install https://gist.githubusercontent.com/Kronuz/96ac10fbd8472eb1e7566d740c4034f8/raw/gtest.rb
 
 before_script:
   - ccache -s
