1. fix some Tidal bugs. 2. change some Qobuz api

--- a/Makefile.am
+++ b/Makefile.am
@@ -93,7 +93,7 @@ libmpd_a_SOURCES = \
 	src/command/MessageCommands.cxx src/command/MessageCommands.hxx \
 	src/command/ClientCommands.cxx src/command/ClientCommands.hxx \
 	src/command/PartitionCommands.cxx src/command/PartitionCommands.hxx \
-	src/external/common/MiscCommands.cxx src/external/common/MiscCommands.hxx \
+	src/command/MiscCommands.cxx src/command/MiscCommands.hxx \
 	src/command/OtherCommands.cxx src/command/OtherCommands.hxx \
 	src/command/CommandListBuilder.cxx src/command/CommandListBuilder.hxx \
 	src/Idle.cxx src/Idle.hxx \
@@ -1382,14 +1382,7 @@ libinput_a_SOURCES += \
 	src/input/IcyInputStream.cxx src/input/IcyInputStream.hxx \
 	src/input/plugins/CurlInputPlugin.cxx src/input/plugins/CurlInputPlugin.hxx \
 	$(CURL_SOURCES) \
-	src/IcyMetaDataParser.cxx src/IcyMetaDataParser.hxx \
-	src/external/common/CurlCommand.cxx src/external/common/CurlCommand.hxx \
-	src/external/common/CurlSocket.cxx src/external/common/CurlSocket.hxx \
-	src/external/common/RealUrl.cxx src/external/common/RealUrl.hxx \
-	src/external/common/HttpError.cxx src/external/common/HttpError.hxx \
-	src/external/common/TidalConfig.cxx src/external/common/TidalConfig.hxx \
-	src/external/common/QobuzSession.cxx src/external/common/QobuzSession.hxx \
-	src/external/common/Context.cxx src/external/common/Context.hxx
+	src/IcyMetaDataParser.cxx src/IcyMetaDataParser.hxx
 endif
 
 if ENABLE_TIDAL
@@ -1409,10 +1402,13 @@ if ENABLE_QOBUZ
 libinput_a_SOURCES += \
 	$(YAJL_SOURCES) \
 	src/lib/gcrypt/MD5.cxx src/lib/gcrypt/MD5.hxx \
-	src/input/plugins/QobuzSession.hxx \
+	src/input/plugins/QobuzSession.cxx \
+	src/input/plugins/QobuzResponse.cxx \
+	src/input/plugins/QobuzEvent.cxx \
 	src/input/plugins/QobuzClient.cxx src/input/plugins/QobuzClient.hxx \
 	src/input/plugins/QobuzErrorParser.cxx src/input/plugins/QobuzErrorParser.hxx \
-	src/input/plugins/QobuzLoginRequest.cxx src/input/plugins/QobuzLoginRequest.hxx \
+	src/input/plugins/QobuzModel.cxx src/input/plugins/QobuzModel.hxx \
+	src/input/plugins/QobuzQueue.cxx src/input/plugins/QobuzQueue.hxx \
 	src/input/plugins/QobuzTrackRequest.cxx src/input/plugins/QobuzTrackRequest.hxx \
 	src/input/plugins/QobuzTagScanner.cxx src/input/plugins/QobuzTagScanner.hxx \
 	src/input/plugins/QobuzInputPlugin.cxx src/input/plugins/QobuzInputPlugin.hxx
