.travis.yml: force updating homebrew on OSX
Workaround for Travis failures as described in
 https://travis-ci.community/t/macos-build-fails-because-of-homebrew-bundle-unknown-command/7296/18

--- a/.travis.yml
+++ b/.travis.yml
@@ -126,6 +126,7 @@ matrix:
           packages:
             - ccache
             - meson
+          update: true
       env:
         - MATRIX_EVAL="export PATH=/usr/local/opt/ccache/libexec:$PATH HOMEBREW_NO_ANALYTICS=1"
 
