--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -13,6 +13,7 @@
   <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
 
   <application android:allowBackup="true"
+               android:debuggable="true"
                android:icon="@drawable/icon"
                android:label="@string/app_name">
     <activity android:name=".Settings"
