--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -19,6 +19,7 @@
   <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
 
   <application android:allowBackup="true"
+               android:debuggable="true"
                android:requestLegacyExternalStorage="true"
                android:icon="@drawable/icon"
                android:banner="@drawable/icon"
