mixer: add AndroidMixerPlugin

--- a/src/mixer/plugins/meson.build
+++ b/src/mixer/plugins/meson.build
@@ -34,6 +34,10 @@ if is_windows
   mixer_plugins_sources += 'WinmmMixerPlugin.cxx'
 endif
 
+if is_android
+  mixer_plugins_sources += 'AndroidMixerPlugin.cxx'
+endif
+
 mixer_plugins = static_library(
   'mixer_plugins',
   mixer_plugins_sources,
