--- a/meson.build
+++ b/meson.build
@@ -145,7 +145,7 @@ add_global_arguments(common_cppflags, language: 'cpp')
 enable_daemon = not is_windows and not is_android and get_option('daemon')
 conf.set('ENABLE_DAEMON', enable_daemon)
 
-conf.set('HAVE_LOCALE_H', compiler.has_header('locale.h'))
+conf.set('HAVE_CLOCALE', compiler.has_header('clocale'))
 
 conf.set('HAVE_GETPWNAM_R', compiler.has_function('getpwnam_r'))
 conf.set('HAVE_GETPWUID_R', compiler.has_function('getpwuid_r'))
