src/event/meson.build: depend in libnet.a
The event library uses various libnet.a classes,
e.g. SocketDescriptor.

--- a/src/event/meson.build
+++ b/src/event/meson.build
@@ -25,6 +25,7 @@ event_dep = declare_dependency(
   link_with: event,
   dependencies: [
     thread_dep,
+    net_dep,
     system_dep,
     boost_dep,
   ],
