Client traits to sort lists by case sensitive or insensitive order (MusicPlayerDaemon/MPD#494)

--- a/meson.build
+++ b/meson.build
@@ -227,6 +227,7 @@ sources = [
   'src/command/PartitionCommands.cxx',
   'src/command/OtherCommands.cxx',
   'src/command/CommandListBuilder.cxx',
+  'src/command/ClientTraitsCommands.cxx',
   'src/Idle.cxx',
   'src/IdleFlags.cxx',
   'src/decoder/Domain.cxx',
@@ -251,6 +252,7 @@ sources = [
   'src/client/File.cxx',
   'src/client/Response.cxx',
   'src/client/ThreadBackgroundCommand.cxx',
+  'src/client/ClientTraits.cxx',
   'src/Listen.cxx',
   'src/LogInit.cxx',
   'src/ls.cxx',
